index file updated

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <section class="atomic-mountain">
       <div class="atomic-text">
         <div class="textwrapper">
-          <p class="smalltext">This is small text</p>
+          <p class="smalltext">MODULE HEADING</p>
           <h3>Atomic Content</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -171,13 +171,13 @@
         </div>
       </div>
       <div class="blue-mountain">
-        <img width="500px" src="images/mountain-02.jpg" alt="A blue mountain" />
+        <img width="500px" src="images/atomic-img-02.jpg" alt="A blue mountain" />
       </div>
     </section>
     <section class="atomic-mountain-02">
       <div class="atomic-text">
         <div class="textwrapper">
-          <p class="smalltext">This is small text</p>
+          <p class="smalltext">MODULE HEADING</p>
           <h3>Atomic Content</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="blue-mountain">
-        <img width="500px" src="images/mountain-02.jpg" alt="A blue mountain" />
+        <img width="500px" src="images/atomic-img-02.jpg" alt="A blue mountain" />
       </div>
     </section>
 
