--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
       </div>
       <div class="blue-mountain">
-        <img width="500px" src="images/atomic-img-02.jpg" alt="A blue mountain" />
+        <img width="500px" src="images/mountain-02.jpg" alt="A blue mountain" />
       </div>
     </section>
     <section class="atomic-mountain-02">
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="blue-mountain">
-        <img width="500px" src="images/atomic-img-02.jpg" alt="A blue mountain" />
+        <img width="500px" src="images/mountain-02.jpg" alt="A blue mountain" />
       </div>
     </section>
 
